k8s-235/apps/netbox/overlays/prod/resources/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netbox
  labels:
    app.kubernetes.io/name: netbox
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.tls: "true"
    external-dns.alpha.kubernetes.io/target: "traefik.k8s.235.tdude.co"
spec:
  tls:
  - hosts:
    - netbox.tdude.co
    secretName: netbox-tdude-co-tls
  rules:
    - host: netbox.tdude.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netbox
                port:
                  name: http
